--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet' type='text/css'>
 
     <!-- my css -->
-    <link rel="stylesheet" href="/css/konami.css">
+    <link rel="stylesheet" href="/css/WizVsDragon.css">
 </head>
 
 <body>
