--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <div>
-        <h1 class="text">Enter the Konami Code to Start</h1>
+        <h2 class="leftText fontPos">Enter the Konami Code to Start</h2>
+        <h2 class="rightText"></h2>
     </div>
 
         <div class="road">
@@ -54,7 +55,7 @@
             if (userInputString===codeArrString) {
                 playSound();
                 $("body").css("background", "url(/img/fantasyForest.png) no-repeat center fixed").css("background-size", "cover");
-                $("h1").text("You have added 30 lives!");
+                $(".leftText").text("Use a-d to move").css("font-size", "2.5em");
                 $(".dragon").html("<img src='/img/purpleDragon.png'>");
                 $(".wizard").html("<img src='/img/wizard-icon.png'>");
             } 
