Added comment for attribution of sound file

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
             <div class="dragon"></div>
         </div>
 
+    <!-- audio file courtesty of Brandino480 via soundbible.com -->
     <audio preload="auto" id="metroid">
         <source src="/sound/Metroid_Door.mp3" type="audio/mpeg">
     </audio>
