--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
     <script src="/js/jquery.js"></script>
     <script>
+    (function(){ 
         "use strict";
             
         var userInput = [];
@@ -95,6 +96,7 @@
                 $(".wizard img").animate({"margin-left": "+=90px"});
             };
         };
+    })();
     </script>
 </body>
 </html>
