Added fire images, edited css.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Konami Code</title>
+    <title>Wizard vs Dragon Konami</title>
 
     <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet' type='text/css'>
@@ -17,7 +17,6 @@
     </div>
 
         <div class="road">
-            <div class="fireball"></div>
             <div class="wizard"></div>
             <div class="dragon"></div>
         </div>
