--- a/public/index.html
+++ b/public/index.html
@@ -97,13 +97,14 @@
             }; 
          });
 
-        function movements(event) {
-            
+        function movements(event) { 
             // var to store user input, 'concatenated' 
             userInput.push(event.keyCode);
    
             //var for randomizer
             var randomNum = Math.floor((Math.random() * 100) + 1);
+            //var target wizFire
+            var fireballMove = document.getElementById("wizFire");
 
             // for character movements, only left-right
             if (event.keyCode=='76') {
@@ -121,17 +122,13 @@
 
             //for "fighting" (only wizard fire now)
             if (event.keyCode=='32') {
-                $("#wizFire").css("opacity", "1").animate({"margin-left":"+=300px"});
-                    
-                    var fireballMove = document.getElementById("wizFire");
-
-                    fireballMove.addEventListener("animationend", function boom(){
-
-                        $(".dragon").html("<img src='/img/explode.png'>");
-                    });
+                $("#wizFire").css("opacity", "1").animate({"margin-left":"+=300px"}, function() {
+                    $(".dragon").html("<img src='/img/explode.png'>"); 
+                    $("#wizFire").css("opacity", "0"); 
+                });
             };
-
         };
+
 
         //NOTES TO DO:
 
