--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <div class="col-md-4">
                 <div class="fire">
                     <img id="wizFire" src="/img/wizFire.png">
-                    <img id="draongFire" src="/img/dragonFire.png">
+                    <img id="dragonFire" src="/img/dragonFire.png">
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                 playSound();
                 $("body").css("background", "url(/img/fantasyForest.png) no-repeat center fixed").css("background-size", "cover");
                 $(".leftText").text("Use a-d to move").css("font-size", "2.5em");
-                $(".rightText").text("Use j-l to move").css(
+                $(".rightText").text("Use spacebar to shoot").css(
                     {
                         "font-size": "2.5em",
                         "font-family": "Monofett",
@@ -107,12 +107,12 @@
             var fireballMove = document.getElementById("wizFire");
 
             // for character movements, only left-right
-            if (event.keyCode=='76') {
-                $(".dragon img").animate({"margin-right": "-=95px"});
-            };
-            if (event.keyCode=='74') {
-                $(".dragon img").animate({"margin-right": "+=95px"});
-            };
+            // if (event.keyCode=='76') {
+            //     $(".dragon img").animate({"margin-right": "-=95px"});
+            // };
+            // if (event.keyCode=='74') {
+            //     $(".dragon img").animate({"margin-right": "+=95px"});
+            // };
             if (event.keyCode=='65') {
                 $(".wizard img").animate({"margin-left": "-=90px"});
             };
@@ -122,21 +122,27 @@
 
             //for "fighting" (only wizard fire now)
             if (event.keyCode=='32') {
-                $("#wizFire").css("opacity", "1").animate({"margin-left":"+=300px"}, function() {
-                    $(".dragon").html("<img src='/img/explode.png'>"); 
-                    $("#wizFire").css("opacity", "0"); 
-                });
+                if(randomNum % 2 == 0) {
+                    $("#wizFire").css("opacity", "1").animate({"margin-left":"+=300px"}, function() {
+                        $(".dragon").html("<img src='/img/explode.png'>"); 
+                        $("#wizFire").css("opacity", "0"); 
+                    });
+                } else {
+                    $("#dragonFire").css("opacity", "1").animate({"margin-right":"+=300px"}, function() {
+                        $(".wizard").html("<img src='/img/explode.png'>");
+                        $("#dragonFire").css("opacity", "0");
+                    });
+                };
             };
         };
 
 
         //NOTES TO DO:
 
-            //remove dragon movement? fix why not moving?
+            //remove dragon movement
 
             //if %2 wiz fires, else dragon fires
 
-            //fix animation end/start thing: opposite should "disappear" and replace by explosion.
         
 
 
