Removed dragon movement. Added comment notes for updates and changes.

--- a/public/index.html
+++ b/public/index.html
@@ -106,13 +106,6 @@
             //var target wizFire
             var fireballMove = document.getElementById("wizFire");
 
-            // for character movements, only left-right
-            // if (event.keyCode=='76') {
-            //     $(".dragon img").animate({"margin-right": "-=95px"});
-            // };
-            // if (event.keyCode=='74') {
-            //     $(".dragon img").animate({"margin-right": "+=95px"});
-            // };
             if (event.keyCode=='65') {
                 $(".wizard img").animate({"margin-left": "-=90px"});
             };
@@ -139,10 +132,9 @@
 
         //NOTES TO DO:
 
-            //remove dragon movement
-
-            //if %2 wiz fires, else dragon fires
-
+        //try to limit wizard movement
+        //disable movement after fireball fires
+        //disable multiple fireballs possibility
         
 
 
