Added note to designate latest version

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Wizard vs Dragon Konami</title>
 
+    <!-- bobbieo.dev is latest working version, need to update -->
+
     <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet' type='text/css'>
 
